# testing_pr

./: .gitignore  AGENTS.md  README.md  calculator.py  farewell.py  greeting.py  hello.txt  password_generator.py  pyproject.toml  test_todo.py  todo.py  todos.json
.agents/: pr-review-agent.md
.agents/skills/gh-cli/: SKILL.md
.agents/skills/gh-cli/scripts/: gh-pr-fmt.sh
.agents/skills/pr-review/: SKILL.md
.agents/skills/pr-review/scripts/: validate_draft.py  validate_plan.py
.agents/skills/pr-revise/: SKILL.md
.opencode/agents/: pr-review.md  pr-revise-apply.md
finance_manager/: cli.py
finance_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
finance_manager/config/: __init__.py  auth.py  settings.py
finance_manager/logic/: __init__.py  calculations.py
finance_manager/models/: __init__.py  entities.py  schemas.py
finance_manager/services/: __init__.py  gateway.py  local_store.py  migration.py  sheets.py
finance_manager/ui/: __init__.py  app.py  forms.py  screens.py
tests/: test_auth_security.py  test_calculations.py  test_cli.py  test_gateway.py  test_migration.py  test_offline_gateway.py  test_offline_store.py  test_release_domain.py  test_repository.py  test_sheets_cache.py  test_tui_interactive.py  test_tui_onboarding.py  test_tui_release.py  test_tui_snapshot.py  test_ui_app.py
todo/: __init__.py  cli.py  core.py  io.py  models.py  tui.py  tui.tcss
