[project]
name = "finance-manager"
version = "0.1.0"
description = "A CLI-based personal finance manager with a Textual TUI and Google Sheets backend"
requires-python = ">=3.9"
dependencies = [
    "gspread>=6.1.2",
    "google-auth>=2.32.0",
    "google-auth-oauthlib>=1.2.1",
    "rich>=13.0.0",
    "textual>=2.0.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
finance-manager = "finance_manager.cli:main"

[tool.setuptools.packages.find]
include = ["finance_manager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
